/*
 * Copyright 2019-2021 Signal Messenger, LLC
 * SPDX-License-Identifier: AGPL-3.0-only
 */

syntax = "proto2";

// Messages sent over RTP data

package rtp_data;

message Accepted {
  optional uint64 id = 1;
}

message Hangup {
  enum Type {
    HANGUP_NORMAL          = 0;
    HANGUP_ACCEPTED        = 1;
    HANGUP_DECLINED        = 2;
    HANGUP_BUSY            = 3;
    HANGUP_NEED_PERMISSION = 4;
  }

  optional uint64 id       = 1;
  optional Type   type     = 2;
  optional uint32 deviceId = 3;
}

message SenderStatus {
  optional uint64 id             = 1;
  optional bool   video_enabled  = 2;
  optional bool   sharing_screen = 3;
}

message ReceiverStatus {
  optional uint64 id              = 1;
  // Used during the call to convey the bitrate that should be used for sending.
  optional uint64 max_bitrate_bps = 2;
}

message Message {
  optional Accepted       accepted       = 1;
  optional Hangup         hangup         = 2;
  optional SenderStatus   senderStatus   = 3;
  // If set, a larger value means a later message than a smaller value.
  // Can be used to detect that messages are out of order.
  // Useful when sending over transports that don't have ordering
  // (or when sending over more than one transport)
  optional uint64         seqnum = 4;
  optional ReceiverStatus receiverStatus = 5;
}
